Fix width of short articles on iOS. Again.

--- a/public/css/reader.css
+++ b/public/css/reader.css
@@ -312,7 +312,7 @@ div.gu_advert {
 }
 #next {
 	right: 0;
-	background: #eee url(img/bg_next.png) left top repeat-y;
+	background: #e00 url(img/bg_next.png) left top repeat-y;
 }
 
 /***************************************************
@@ -449,8 +449,11 @@ body#about-page {
 	margin-left: 10px;
 	margin-right: 10px;
 }
-.touch #controls {
-	display: none;
+.touch #prev {
+	background: #f00;
+}
+.touch #next {
+	background: #0f0;
 }
 .touch #progress {
 	margin-top: 1em;
